# shego

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
lib/: CMakeLists.txt
lib/include/: writer.hpp
lib/src/: writer.cpp
scripts/ci/: appimage.sh
ui/: main.cpp
