set(LIBRARY_TARGET_NAME writer)

include(GNUInstallDirs)

add_library(${LIBRARY_TARGET_NAME} src/writer.cpp)

target_include_directories(
  ${LIBRARY_TARGET_NAME}
  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}>
  PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)

set_target_properties(${LIBRARY_TARGET_NAME} PROPERTIES PUBLIC_HEADER
                                                        include/writer.hpp)

install(
  TARGETS ${LIBRARY_TARGET_NAME}
  EXPORT ${LIBRARY_TARGET_NAME}-export
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})

install(
  EXPORT ${LIBRARY_TARGET_NAME}-export
  FILE ${LIBRARY_TARGET_NAME}-export.cmake
  NAMESPACE ${PROJECT_NAME}::
  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
